[tool.poetry]
name = "pypugjs"
version = "5.13.0"
description = ""
authors = ["Andy Grabow <andy@freilandkiwis.de>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
charset-normalizer = "^3.4.4"
six = "^1.17.0"

[tool.poetry.group.dev.dependencies]
coverage = "^7.11.0"
Django = "^4.2.25"
flake8 = "^7.3.0"
Flask = "^2.3.3"
icecream = "^2.1.8"
Jinja2 = "^3.1.6"
Mako = "^1.3.10"
pytest = "^8.4.2"
pytest-asyncio = "^1.2.0"
pytest-cov = "^7.0.0"
tornado = "^6.5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
